--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,11 @@
                 name="Pants Build File"
                 fieldName="INSTANCE"
                 implementationClass="com.zocdoc.platform.pants.BuildFileType"
+                extensions=""
+                fileNames="BUILD"
+                patterns="BUILD"
+                language="Build"
+
         />
         <lang.syntaxHighlighterFactory
                 language="Build"
